--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <canvas id=c></canvas>
   <canvas id="confetti"></canvas>
   <div class="container" id="count">
-    <h1 id="head">Countdown to your birthday:</h1>
+    <h1 id="head">Đếm ngược tới ngày sinh nhật của Ngọc</h1>
     <ul>
-      <li><span id="day"></span>days</li>
-      <li><span id="hour"></span>hours</li>
-      <li><span id="minute"></span>minutes</li>
-      <li><span id="second"></span>seconds</li>
+      <li><span id="day"></span>ngày</li>
+      <li><span id="hour"></span>giờ</li>
+      <li><span id="minute"></span>phút</li>
+      <li><span id="second"></span>giây</li>
     </ul>
   </div>
 
