--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <canvas id=c></canvas>
   <canvas id="confetti"></canvas>
   <div class="container" id="count">
-    <h1 id="head">ĐẾM NGƯỢC TỚI NGÀY SINH NHẬT NGỌC</h1>
+    <h1 id="head">ĐẾM NGƯỢC TỚI NGÀY SINH NHẬT</h1>
     <ul>
       <li><span id="day"></span>ngày</li>
       <li><span id="hour"></span>giờ</li>
